syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_schedules;

message DsSchedules {

     int32 id=1 ;
     int64 process_definition_code=2 ;
     string  start_time=3 ;
     string end_time=4 ;
     optional string   timezone_id= 5;
     string   crontab= 6;
     int32  failure_strategy=7 ;
     int32  user_id=8 ;
     int32  release_state=9 ;
     int32    warning_type=10 ;
     optional int32   warning_group_id=11 ;
     optional int32   process_instance_priority=12 ;
     optional string worker_group=13 ;
     optional int64 environment_code=14 ;
     string create_time=15 ;
     string update_time=16 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsSchedulesService {
  rpc ListDsScheduless(ListDsSchedulessRequest) returns (ListDsSchedulessResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsScheduless"
    };
  }

  rpc GetDsSchedules(GetDsSchedulesRequest) returns (DsSchedules) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsScheduless/*}"
    };
  }

  rpc CreateDsSchedules(CreateDsSchedulesRequest) returns (DsSchedules) {
    option (google.api.http) = {
      post: "/v1alpha1/DsScheduless"
      body: "DsSchedules"
    };
  }

  rpc UpdateDsSchedules(UpdateDsSchedulesRequest) returns (DsSchedules) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsSchedules.name=DsScheduless/*}"
      body: "DsSchedules"
    };
  }

  rpc DeleteDsSchedules(DeleteDsSchedulesRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsScheduless/*}"
    };
  }
}

// message DsSchedules {
// ! This should be defined elsewhere
// }

message ListDsSchedulessRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsSchedulessResponse {
  // The field name should match the noun "DsSchedules" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsSchedules DsScheduless = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsSchedulesRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsSchedulesRequest {
  // The parent resource name where the DsSchedules is to be created.
  string parent = 1;

  // The DsSchedules id to use for this DsSchedules.
  string DsSchedules_id = 2;

  // The DsSchedules resource to create.
  // The field name should match the Noun in the method name.
  DsSchedules DsSchedules = 3;
}

message UpdateDsSchedulesRequest {
  // The DsSchedules resource which replaces the resource on the server.
  DsSchedules DsSchedules = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsSchedulesRequest {
  // The resource name of the DsSchedules to be deleted.
  string name = 1;
}
